Try to fix the issue where laravel mix is stucked in a loop

--- a/src/sass/common/_icons.scss
+++ b/src/sass/common/_icons.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon/icomoon.eot?jcg9f9');
-  src:  url('../fonts/icomoon/icomoon.eot?jcg9f9#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon/icomoon.ttf?jcg9f9') format('truetype'),
-    url('../fonts/icomoon/icomoon.woff?jcg9f9') format('woff'),
-    url('../fonts/icomoon/icomoon.svg?jcg9f9#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?jcg9f9');
+  src:  url('../fonts/icomoon.eot?jcg9f9#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?jcg9f9') format('truetype'),
+    url('../fonts/icomoon.woff?jcg9f9') format('woff'),
+    url('../fonts/icomoon.svg?jcg9f9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
